--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <br>
     <br>
 
-    <a href="https://www.linkedin.com/in/saurabh-kumar-rai-435b94209/"> <img src="linklogo.png" alt="linkedin logo" height="100" width="100"> </a>
+    <a href="https://www.linkedin.com/in/saurabhkumarrai/?trk=public_profile_samename-profile&originalSubdomain=in"> <img src="linklogo.png" alt="linkedin logo" height="100" width="100"> </a>
     <br>
     <a href="https://www.linkedin.com/in/saurabh-kumar-rai-435b94209/">Linkedin </a>
     <br>
