--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
+<style media="screen">
+  hr {
+    background-color: white;
+    border-style: none;
+border-top-style: dashed;
+border-width: 5px;
+    width="1";
+
+  }
+
+</style>
+
+
 <head>
   <meta charset="utf-8">
   <title>Saurabh kumar rai</title>
-</head>
+</head">
 
-<body>
+<body style="background-color: #316B83;>
 
   <table cellspacing="20">
     <tr>
-      <td> <img src="https://media-exp1.licdn.com/dms/image/C4E03AQG6aKBYHMpxcQ/profile-displayphoto-shrink_800_800/0/1632923303159?e=1646870400&v=beta&t=14UMqBX7Jmj-rwyKx8-8kDVFc5A1TPexmxvLO71giXw" height="200" width="200"
+      <td> <img src="https://media-exp1.licdn.com/dms/image/C4E03AQG6aKBYHMpxcQ/profile-displayphoto-shrink_400_400/0/1632923303159?e=1639008000&v=beta&t=-4Z-LZlOArcNP1OIJc6GpyEAMMMExKoIUW2U7qBMCzI" height="200" width="200"
           alt="Saurabh kumar rai profile picture"></td>
       <td>
         <h1>Saurabh kumar rai</h1>
@@ -31,7 +44,7 @@
     I am a Student of <strong>Btech in CSE</strong> (1st semester) at <a href="https://en.wikipedia.org/wiki/Lovely_Professional_University"><em>Lovely Professional University.</em></a>
     Working on Full stack development. and i <strong>LOVE</strong> programming.
   </p>
-  <hr size="5" noshade>
+  <hr size="5" style="background-color: white ;">
 
 
 
