--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ border-width: 5px;
 
 
   <p>
-    I am a Student of <strong>Btech in CSE</strong> (1st semester) at <a href="https://en.wikipedia.org/wiki/Lovely_Professional_University"><em>Lovely Professional University.</em></a>
-    Working on Full stack development. and i <strong>LOVE</strong> programming.
+    I am a Student of <strong>Btech in CSE</strong> (2nd semester) at <a href="https://en.wikipedia.org/wiki/Lovely_Professional_University"><em>Lovely Professional University.</em></a>
+    Working on Full stack and Unity Game development. and i <strong>LOVE</strong> programming.
   </p>
   <hr size="5" style="background-color: white ;">
 
