--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ border-width: 5px;
           <p>Computer science engineer.
           <p>
 
-          </p> <strong>Full stack developer</strong>.
+          </p> <strong>Game Dev</strong>.
         </em> </p>
       </td>
     </tr>
@@ -42,7 +42,7 @@ border-width: 5px;
 
   <p>
     I am a Student of <strong>Btech in CSE</strong> (2nd semester) at <a href="https://en.wikipedia.org/wiki/Lovely_Professional_University"><em>Lovely Professional University.</em></a>
-    Working on Full stack and Unity Game development. and i <strong>LOVE</strong> programming.
+    Working on Full stack and Unity 2D Game development. and i <strong>LOVE</strong> programming.
   </p>
   <hr size="5" style="background-color: white ;">
 
