--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ border-width: 5px;
           <p>Computer science engineer.
           <p>
 
-          </p> <strong>Game Dev</strong>.
+          </p> <strong>Full Stack Developer | Game Dev</strong>.
         </em> </p>
       </td>
     </tr>
