--- a/index.html
+++ b/index.html
@@ -1,147 +1,109 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<style media="screen">
-  hr {
-    background-color: white;
-    border-style: none;
-border-top-style: dashed;
-border-width: 5px;
-    width="1";
-
-  }
-
-</style>
-
-
 <head>
-  <meta charset="utf-8">
-  <title>Saurabh kumar rai</title>
-</head">
+  <meta charset="utf-8" name="saurabh" content="CV,Js,Css" name="description" content="Saurabh kumar rai is CS- full stack developer & Game developer">
+  <title>😋Saurabh's Personal site</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 
-<body style="background-color: #316B83;>
-
-  <table cellspacing="20">
+<body >
+  <table cellspacing="10">
     <tr>
-      <td> <img src="https://media-exp1.licdn.com/dms/image/C4E03AQG6aKBYHMpxcQ/profile-displayphoto-shrink_400_400/0/1632923303159?e=1646870400&v=beta&t=X61tFKG9aNH_NtVGoVYMY4pxPc-XKZUrVYkvXkvEFio" height="200" width="200"
-          alt="Saurabh kumar rai profile picture"></td>
+      <td><a href="https://www.linkedin.com/in/saurabhkumarrai/?trk=public_profile_samename-profile&originalSubdomain=in" target="_blank"><img
+            src="https://media-exp1.licdn.com/dms/image/C4E03AQG6aKBYHMpxcQ/profile-displayphoto-shrink_400_400/0/1632923303159?e=1647475200&v=beta&t=WFrgLypjOfTQxQgf-f1rA-RqbuvxU6TWaewdVhjE-cI" class="circular" alt="Saurabh-Kumar-Rai's-profile-picture" height="152"
+            width="152"></a></td>
       <td>
-        <h1>Saurabh kumar rai</h1>
-        <em>
-          <p>Computer science engineer.
-          <p>
-
-          </p> <strong>Full Stack Developer | Game Dev</strong>.
-        </em> </p>
+        <h1 class="grey profile-pic">Saurabh Kumar Rai</h1>
+        <p><em>Software engineer who loves <strong style="color:#C71585">web developement</strong> and <strong style="color:#C71585">game developement.</strong></em></p>
       </td>
     </tr>
   </table>
 
-
-
-
-  <p>
-    I am a Student of <strong>Btech in CSE</strong> (2nd semester) at <a href="https://en.wikipedia.org/wiki/Lovely_Professional_University"><em>Lovely Professional University.</em></a>
-    Working on Full stack and Unity 2D Game development. and i <strong>LOVE</strong> programming.
-  </p>
-  <hr size="5" style="background-color: white ;">
-
-
-
-  <h1>Progress:</h1>
-  <table border="1">
-
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Progress</th>
-      </tr>
-    </thead>
-
-
-    <tbody>
-      <tr>
-        <td>2017</td>
-        <td>matric</td>
-      </tr>
-
-      <tr>
-        <td>2018-2020</td>
-        <td>high schoool</td>
-      </tr>
-
-      <tr>
-        <td>2021</td>
-        <td>Btech cse</td>
-      </tr>
-    </tbody>
-
-
-    <tfoot>
-
-    </tfoot>
-
-  </table>
-
-
-
-  <br><br>
-  <hr size="2" noshade>
-  <h1>Education:</h1>
+  <p>Crrently pursuing <strong style="color:#C71585">Btech in computer science engineering</strong> and I'm working on <strong style="color:#C71585">WebPage developement</strong> and <strong style="color:#C71585">game
+      developement</strong>.
+    This is my first project of personal site developement and this is the 2nd day of developement.</p>
+<br>
+<hr size="5" noshade>
+  <h3 class="heading" style="color:#708090">Education and acomplishments</h3>
   <ul>
-    <li>Indian Public School,Primary</li>
-    <li>Gyanda International,Middle school</li>
-    <li>IMHS, high school</li>
-
+    <li><a style="color:#C71585" href="https://en.wikipedia.org/wiki/Lovely_Professional_University" target="_blank">Lovely Proffesional University</a></li>
+    <li>Ibrahim Memorial High school: </li>
+    <li>Gyanda Internationl: </li>
   </ul>
-  <br><br>
-  <hr size="2" noshade>
-  <h1>My Hobbies:</h1>
-  <ol>
-    <li>Programming</li>
-    <li>Cooking</li>
-    <li>Watching web-serieses</li>
-    <li>Workout</li>
+  <hr size="5" noshade>
+  <h3 class="heading" style="color:#708090">Hobbies</h3>
+  <ol type="i">
+    <li>Football</li>
+    <li>Singing</li>
+    <li>Spending time with family</li>
   </ol>
 
-  <a href="contact.html">Contact</a>
+  <a href="contact.html" target="_blank">Contact me</a>
+<br><br><hr size="5" noshade><br>
+  <table>
 
+    <head>
+      <th style="color:#708090">Insitution</th>
+      <th style="color:#708090">Year</th>
+    </head>
+
+    <body>
+      <tr style="color:#C71585">
+        <td>LPU</td>
+        <td>2021</td>
+      </tr>
+      <tr style="color:#FFF5EE">
+        <td>IMHS</td>
+        <td>2018</td>
+      </tr>
+      <tr style="color:#FFF5EE">
+        <td>GYIH</td>
+        <td>2014</td>
+      </tr>
+    </body>
+
+  </table>
+  <hr size="5" noshade>
+  <h3 class="heading" style="color:#708090">Skills and Ratings</h3>
+
+  <table>
+    <tr>
+      <td>
+        <table cellspacing="5">
+
+          <body>
+            <tr style="color:#C71585">
+              <td>C Programming</td>
+              <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr style="color:#FFF5EE">
+              <td>HTML</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+          </body>
+        </table>
+  </td>
+  <td>
+    <table cellspacing="5">
+
+      <body>
+        <tr style="color:#FFF5EE">
+          <td>C++</td>
+          <td>⭐⭐</td>
+        </tr>
+        <tr style="color:#FFF5EE">
+          <td>Football</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+    </table>
 </body>
-<hr size="4" noshade>
-<h1>Skill and rating:</h1>
-
-<table cellspacing="10">
-  <td><table>
-    <tbody>
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>C lanuage</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-    </tbody>
-  </table></td>
-  <td><table>
-    <tbody>
-      <tr>
-        <td>CSS</td>
-        <td>⭐</td>
-      </tr>
-      <tr>
-        <td>javascript</td>
-        <td>⭐</td>
-      </tr>
-    </tbody>
-  </table></td>
 </table>
 
-<hr size="4" noshade >
+</td>
+</tr>
+</table>
 
-<form class="" action="index.html" method="post">
-  <input type="search" name="Search on this Website" value="search here">
-
-</form>
+</body>
 
 </html>
