--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" name="saurabh" content="CV,Js,Css" name="description" content="Saurabh kumar rai is CS- full stack developer & Game developer">
   <title>😋Saurabh's Personal site</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body >
